tkgaws-1/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - secretName: frontend-tls
      hosts:
        - frontend-acme-fitness.tkgaws.cna-demo.ga
  rules:
    - host: frontend-acme-fitness.tkgaws.cna-demo.ga
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: http-frontend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
spec:
  ports:
    - name: http-frontend
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: acmefit
    service: frontend
  type: ClusterIP
---
